2000-10-23  Andreas Schwab  <schwab@suse.de>

	* sysdeps/unix/sysv/linux/ia64/bits/resource.h (RLIMIT_LOCKS): Added.
	(RLIMIT_NLIMITS): Sync with kernel definition.
	(PRIO_PROCESS, PRIO_PGRP, PRIO_USER): Also define as macros.

2000-10-23  Andreas Schwab  <schwab@suse.de>

	* sysdeps/m68k/fpu/libm-test-ulps: Updated.

2000-10-23  Ulrich Drepper  <drepper@redhat.com>

	* elf/elf.h (R_IA64_GPREL32MSB, R_IA64_GPREL32LSB): New definitions.

2000-10-22  Bruno Haible  <haible@clisp.cons.org>

	* iconvdata/big5hkscs.c (big5hkscs_to_ucs): Add irreversible mappings
	for 0x8BF8, 0xA27E..0xA2A7.
	* iconvdata/BIG5HKSCS.irreversible: New file.

2000-10-23  Jakub Jelinek  <jakub@redhat.com>

	* timezone/zdump.c (main): setlocale LC_CTYPE as well as LC_MESSAGES.
	* timezone/zic.c (main): Likewise.

2000-10-23  Thorsten Kukuk  <kukuk@suse.de>

	* nscd/connections.c (invalidate_cache): Don't invalidate a cache
	if it is not enabled.

2000-10-23  Andreas Jaeger  <aj@suse.de>

	* sysdeps/s390/fpu/libm-test-ulps: New ulps.

	* sysdeps/unix/sysv/linux/mips/syscalls.list: Add fcntl64.
	Patch by Ralf Baechle <ralf@gnu.org>.

2000-10-21  Ulrich Drepper  <drepper@redhat.com>

	* elf/dl-load.c (_dl_map_object_from_fd): Split out ELF file
	verification in open_verify.
	(open_verify): New function.  Called instead of open.  Ignores valid
	files for other architectures.
	(open_path): Call open_verify instead of open.
	(_dl_map_object): Likewise.
	Somewhat based on a patch by Don Dugger <n0ano@valinux.com>.

	* io/pwd.c (main): The output was missing a newline.

	* posix/fnmatch_loop.c: Make FNM_LEADING_DIR behave as GNU tar
	expects it.  Patch by Colin Watson <riva.ucam.org>.
	* posix/tst-fnmatch.input: Add test cases for FNM_LEADING_DIR.

	* elf/dl-open.c (add_to_global): New function.  Split out from
	dl_open_worker.
	(dl_open_worker): Call add_to_global not only for new objects, also for
	previously loaded objects when (mode & RTLD_GLOBAL) and the object
	was not yet in the global scope.