@@ -1,3 +1,8 @@
+2000-10-23  Ulrich Drepper  <drepper@redhat.com>
+
+	* elf/dl-sym.c (_dl_sym): For RTLD_DEFAULT, search in objects
+	global scope if we can determine it.
+
 2000-10-23  Andreas Schwab  <schwab@suse.de>
 
 	* sysdeps/unix/sysv/linux/ia64/bits/resource.h (RLIMIT_LOCKS): Added.
